update to jneilliii

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,21 +7,21 @@
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="https://plugins.octoprint.org/by_author/#charlie-powell">
+                    <a class="nav-link" href="https://plugins.octoprint.org/by_author/#jneilliii">
                         <i class="fas fa-puzzle-piece"></i> Plugins</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="https://github.com/cp2004">
+                    <a class="nav-link" href="https://github.com/jneilliii">
                         <i class="fas fa-user"></i> My Github Profile</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="https://github.com/sponsors/cp2004">
+                    <a class="nav-link" href="https://github.com/sponsors/jneilliii">
                         <i class="fas fa-heart"></i> Support My Projects</a>
                 </li>
             </ul>
             <ul class="navbar-nav mr-0 mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/cp2004/OctoPluginStats"><i class="fas fa-code-branch"></i> Source</a>
+                    <a class="nav-link" href="https://github.com/jneilliii/OctoPluginStats"><i class="fas fa-code-branch"></i> Source</a>
                 </li>
             </ul>
         </div>
