--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,6 +13,10 @@
     <!-- plugin id to name mapping -->
     <script src="static/js/name_map.js"></script>
 
+    <!-- up_btn css and js -->
+    <link href="static/lib/up_btn/up_btn.css" rel="stylesheet">
+    <script src="static/lib/up_btn/up_btn.js"></script>
+
     <title>{{ page.title }}</title>
 </head>
 <body>
@@ -23,5 +27,8 @@
 </div>
 
 <script src="static/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script type="JavaScript">
+up();
+</script>
 </body>
 </html>
