fix img src for up button?

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,7 +28,7 @@
 
 <script src="static/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script type="JavaScript">
-up();
+up({src: '/static/lib/up_btn/chevron-up-solid.svg'});
 </script>
 </body>
 </html>
