switch to bootstrap icon

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -21,7 +21,7 @@
 <div class="container-fluid">
     {{ content }}
 </div>
-<button class="btn" onclick="topFunction()" id="top_btn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
+<button class="btn btn-secondary" onclick="topFunction()" id="top_btn" title="Go to top"><i class="bi bi-arrow-up-square"></i></button>
 <script src="static/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
