css adjustments for button

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12806,16 +12806,18 @@ readers do not read off random characters that represent icons */
   bottom: 20px; /* Place the button at the bottom of the page */
   right: 30px; /* Place the button 30px from the right */
   z-index: 99; /* Make sure it does not overlap */
-  color: #555; /* Text color */
+  color: white; /* Text color */
+  border: 1px solid #555;
   cursor: pointer; /* Add a mouse pointer on hover */
   padding: 15px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
   font-size: 18px; /* Increase font size */
+  background-color: #555; /* Add a dark-grey background on hover */
 }
 
 #top_btn:hover {
-  background-color: #555; /* Add a dark-grey background on hover */
-  color: white; /* Text color */
+  background-color: white; /* Add a dark-grey background on hover */
+  color: #555; /* Text color */
 }
 
 /*!
