--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12806,6 +12806,7 @@ readers do not read off random characters that represent icons */
   right: 30px; /* Place the button 30px from the right */
   z-index: 99; /* Make sure it does not overlap */
   font-size: 18px;
+  display: none;
 }
 
 /*!
