--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12809,6 +12809,11 @@ readers do not read off random characters that represent icons */
   display: none;
 }
 
+#btnContainer {
+    max-height:400px;
+    overflow-y:auto;    
+}
+
 /*!
  * Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
