--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,15 +7,15 @@
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="https://plugins.octoprint.org/by_author/#jneilliii">
+                    <a class="nav-link" href="https://plugins.octoprint.org/by_author/#synman">
                         <i class="fas fa-puzzle-piece"></i> Plugins</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="https://github.com/jneilliii">
+                    <a class="nav-link" href="https://github.com/synman">
                         <i class="fas fa-user"></i> My Github Profile</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="https://github.com/sponsors/jneilliii">
+                    <a class="nav-link" href="https://github.com/sponsors/synman">
                         <i class="fas fa-heart"></i> Support My Projects</a>
                 </li>
             </ul>
